# xds_client

./: CMakeLists.txt  conanfile.txt
cmake/: FindProtobuf.cmake
schema/: AdsClient.h  AsyncAdsClient.cpp  AsyncAdsClient.h  CMakeLists.txt  greetings_client.cpp  greetings_client.h  greetings_server.cpp  greetings_server.h
schema/aa/: test.proto
schema/proto/: greetings.proto
schema/proto/etc/: address.proto  cluster.proto
schema/proto/opentelemetry/proto/metrics/v1/: metrics.proto
schema/proto/xds/type/v3/: cel.proto
src/: CMakeLists.txt  main.cpp
src/ads/: AdsClient.h  CMakeLists.txt  main.cpp
src/ads_protocol_client/: AdsClient.cpp  AdsClient.h  CMakeLists.txt  Cleanup.h  Config.h  DecodedResource.cpp  DecodedResource.h  HttpUtility.cpp  HttpUtility.h  OpaqueResourceDecoder.h  ResourceDecoder.h  ResourceKey.h  ResourceName.h  State.h  Status.h  Watcher.cpp  Watcher.h  XdsResource.cpp  XdsResource.h  XdsSignal.h  main.cpp  proto_descriptors.cc
src/ads_protocol_client/anylink/grpc/manager/: AdsConnection.cpp  AdsConnection.h  AdsManager.cpp  AdsManager.h
src/ads_protocol_client/anylink/grpc/subscription/: ClusterSubscription.cpp  ClusterSubscription.h  EndpointSubscription.cpp  EndpointSubscription.h  ListenerSubscription.cpp  ListenerSubscription.h  RouteSubscription.cpp  RouteSubscription.h  Subscription.h
src/ads_protocol_client/anylink/interface/: IstioLinkManager.cpp  IstioLinkManager.h
src/ads_protocol_client/anylink/local/: LocalInfo.h
src/ads_protocol_client/anylink/local/util/: LocalUtil.cpp  LocalUtil.h
src/ads_protocol_client/envoy/: assert.cc  assert.h  cleanup.h  exception.h  grpc_mux.h  grpc_mux_context.h  grpc_mux_impl.h  grpc_stream.h  interval_set.h  protobuf.h  resource_name.h  subscription.h  time.h  utility.h
src/ads_protocol_client/protofile/: create_dynamic_message.cc  file_descriptor_info.cc  file_descriptor_info.h  text_format_transcoder.cc  text_format_transcoder.h
src/anyapi_ads/: AdsClient.cpp  AdsClient.h  CMakeLists.txt  CdsResource.cpp  CdsResource.h  DecodedResource.h  EdsResource.cpp  EdsResource.h  Protobuf.h  ResourceCache.h  main.cpp
src/asnyc_ads/: AsyncAdsClient.cpp  AsyncAdsClient.h  CMakeLists.txt  main.cpp
